fix overflow on typijng container

--- a/style.css
+++ b/style.css
@@ -231,11 +231,10 @@ h1 {
     padding: 2rem;
   }
   .typingText{
-   
       overflow: hidden; /* Ensures the content is not revealed until the animation */
       border-right: .15em solid orange; /* The typwriter cursor */
       line-height: 5.5ch;
-      white-space: nowrap; Keeps the content on a single line
+      white-space: nowrap; 
       margin: 0 auto; /* Gives that scrolling effect as the typing happens */
       /* letter-spacing: .15em; Adjust as needed */
       animation: 
@@ -254,4 +253,3 @@ h1 {
       from, to { border-color: transparent }
       50% { border-color: orange; }
     }
-  }
